cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})

set(CPACK_PACKAGE_NAME "Hash Generator")
set(CPACK_PACKAGE_VENDOR "Bart Kessels")
set(CPACK_PACKAGE_VERSION_MAJOR ${VER_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${VER_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${VER_PATCH})
set(CPACK_PACKAGE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin)
set(CPACK_PACKAGE_ICON ../resources/icons/main.svg)
set(CPACK_SOURCE_IGNORE_FILES *test)
set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)


if (WIN32)
    set(COMPLETE_BINARY_NAME Release/hashgen.exe)
elseif (APPLE)
    set_target_properties(${BINARY_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
    set_target_properties(
        ${BINARY_NAME}
        PROPERTIES
        RESOURCE "macos/icons/hashgen.icns"
    )

    set(COMPLETE_BINARY_NAME hashgen.app)
    set(CPACK_BUNDLE_NAME HashGenerator)
    set(CPACK_BUNDLE_PLIST macos/Info.plist)
    set(CPACK_BUNDLE_ICON macos/icons/hashgen.icns)
elseif (UNIX AND NOT APPLE)
    set(COMPLETE_BINARY_NAME hashgen)
endif()

install(TARGETS ${APP_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${COMPLETE_BINARY_NAME})
set(CPACK_INSTALL_CMAKE_PROJECTS "${CMAKE_BINARY_DIR}/build/bin/${COMPLETE_BINARY_NAME};${APP_NAME};ALL;/")
